# testgpt

./: .env.example  README.md  alembic.ini  analysis_profiles.yaml  cli.py  config.sample.json  config.yaml  docker-compose.yml  index.html  line_cli.py  line_storage.py  line_webhook_server.py  optimizer.py  package.json  pyproject.toml  tsconfig.base.json  vitest.config.ts  web_ui.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  deploy-cloudflare-pages.yml  readme-setup-guide.yml
ai_affiliate_automation/: README.md  automation_config.yaml
ai_affiliate_automation/data/: sample_sources.jsonl
ai_affiliate_automation/docs/: business_background.md  desktop_quickstart.md  implementation_guide.md  prompt_library.md
ai_affiliate_automation/prompts/: prompt_index.yaml
alembic/: env.py
alembic/versions/: 0001_init.py
apps/api/: Dockerfile  README.md  README_SETUP.md  (+1 more)
docs/: ARCHITECTURE.md  CI_CD_HARNESS_GUIDE.md  LIVE_TESTING.md  OPERATIONS.md  SELECTOR_STRATEGY.md  analysis_formulas.md  architecture.md  assumptions.md  ci-cd-harness.md  compliance.md  image-generation-prompts.md  line_channel_design.md  setup-guide-trigger.md  setup-visual-guide.md
prompts/: aggregation_prompt.md  daily_research_prompt.md
scripts/: collect_and_summarize.py  prepend_readme_setup_guide.py  run_daily.ps1  setup.ps1
tests/: adapter-parser.test.ts  engine.test.ts  test_affiliate_ops.py  test_ai_affiliate_scaffold.py  test_apple_stock_bot.py  test_cli_smoke.py  test_dedupe.py  test_history.py  test_loan.py  test_parser.py  test_valuation.py
(+63 files in other folders)
